<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".book.BookTourFragment">

    <data>

        <variable
            name="viewModel"
            type="com.berkpolat.termproject.book.BookTourViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textview"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/agreementBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/license_agreement"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/book_menu" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="217dp"
            android:layout_height="128dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt">

            <RadioButton
                android:id="@+id/radioButtonDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_1_2_person"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonPers1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_person"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonPers2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_person"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/extra1PerCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/extra_fee"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/extra2PerCost"
            app:layout_constraintStart_toEndOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/extra2PerCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/extra_fee2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/noExtraTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/extra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/extra1PerCost"
            app:layout_constraintTop_toTopOf="@+id/extra1PerCost" />

        <TextView
            android:id="@+id/extra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/extra2PerCost"
            app:layout_constraintStart_toEndOf="@+id/extra2PerCost" />

        <TextView
            android:id="@+id/feeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pay"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feeTxt" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_fee3"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/extra1PerCost"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/total_fee"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agreementBox" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/breakfast"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>