<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addmoney.AddMoneyFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/add_money_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <EditText
        android:id="@+id/enterMoneyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_money"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_money_toolbar" />

    <EditText
        android:id="@+id/enterCardTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_card_no"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterMoneyTxt"
        app:layout_constraintTop_toBottomOf="@+id/enterMoneyTxt" />

    <EditText
        android:id="@+id/enterDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_exp_date"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterCardTxt"
        app:layout_constraintTop_toBottomOf="@+id/enterCardTxt" />

    <EditText
        android:id="@+id/enterCvvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_cvv"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/enterDateTxt" />

    <Button
        android:id="@+id/moneyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_money"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterCvvTxt"
        app:layout_constraintStart_toStartOf="@+id/enterCvvTxt"
        app:layout_constraintTop_toBottomOf="@+id/enterCvvTxt" />

    <Button
        android:id="@+id/cardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_card"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/moneyBtn"
        app:layout_constraintStart_toStartOf="@+id/moneyBtn"
        app:layout_constraintTop_toBottomOf="@+id/moneyBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>


