<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/registerToolBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_an_email2"

            android:inputType="textEmailAddress"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/userNameTextView"
            app:layout_constraintStart_toStartOf="@+id/userNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password2"

            android:inputType="textPassword"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="100dp"
            android:text="@string/register2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView2" />

        <EditText
            android:id="@+id/passwordTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_password_again"
            android:inputType="textPassword"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextView"
            app:layout_constraintStart_toStartOf="@+id/passwordTextView"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <EditText
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>